
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_8__ TYPE_4__ ;
typedef struct TYPE_7__ TYPE_3__ ;
typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct iphdr {int ihl; int version; int ttl; int protocol; int daddr; int saddr; scalar_t__ check; scalar_t__ frag_off; int id; scalar_t__ tot_len; scalar_t__ tos; } ;
struct TYPE_5__ {int s_addr; } ;
struct TYPE_8__ {TYPE_1__ sin_addr; } ;
struct TYPE_6__ {int s_addr; } ;
struct TYPE_7__ {TYPE_2__ sin_addr; } ;


 scalar_t__ IPHEAD_SIZE ;
 scalar_t__ ISAKMPGEN_SIZE ;
 scalar_t__ ISAKMPHEAD_SIZE ;
 scalar_t__ UDPHEAD_SIZE ;
 int htons (int ) ;
 TYPE_4__ local ;
 struct iphdr* malloc (scalar_t__) ;
 int rand () ;
 TYPE_3__ saddr ;
 scalar_t__ spoof ;

struct iphdr * iph(void) {
 struct iphdr *iph = malloc(IPHEAD_SIZE);

 iph->ihl = 5;
 iph->version = 4;
 iph->tos = 0;
 iph->tot_len = IPHEAD_SIZE + UDPHEAD_SIZE + ISAKMPHEAD_SIZE +
  ISAKMPGEN_SIZE;
 iph->id = htons(rand());
 iph->frag_off = 0;
 iph->ttl = 225;
 iph->protocol = 17;
 iph->check = 0;

 if(spoof) {
  iph->saddr = saddr.sin_addr.s_addr;
 }
 else
  iph->saddr = local.sin_addr.s_addr;

 iph->daddr = saddr.sin_addr.s_addr;

 return iph;
}
